Add Vercel serverless backend deployment support
- Add serverless-http and @vercel/node dependencies
- Add initAppForServerless export to server/index.ts
- Update vercel.json for serverless functions with Node.js 20.x runtime
- Configure API routes for serverless deployment

--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/node-telegram-bot-api": "^0.64.13",
     "@types/qrcode": "^1.5.5",
     "@types/web-push": "^3.6.4",
+    "@vercel/node": "^5.5.16",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -100,6 +101,7 @@
     "react-router-dom": "^7.6.3",
     "recharts": "^2.15.2",
     "satori": "^0.18.3",
+    "serverless-http": "^4.0.0",
     "sharp": "^0.34.5",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
