--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,13 @@
       "config": { "distDir": "dist/public" }
     }
   ],
+  "functions": {
+    "api/**/*.ts": {
+      "runtime": "nodejs20.x"
+    }
+  },
   "routes": [
+    { "src": "/api/(.*)", "dest": "/api/$1" },
     { "src": "/(.*)", "dest": "/$1" }
   ]
 }
